--- a/yaml_files/CosmoBit_testCosmo.yaml
+++ b/yaml_files/CosmoBit_testCosmo.yaml
@@ -109,6 +109,11 @@ ObsLikes:
     type:         double
 
   - purpose:      LogLike
+    capability:   Planck_lowl_loglike
+    module:       CosmoBit
+    type:         double
+
+  - purpose:      LogLike
     capability:   Planck_highl_loglike
     module:       CosmoBit
     type:         double
@@ -174,9 +179,17 @@ Rules:
 ##  this ambiguity manually.
 #####
 
+  - capability: Planck_lowl_loglike
+    function: function_Planck_lowl_TT_2018_loglike
+    #function: function_Planck_lowl_TTEE_2018_loglike
+
   - capability: Planck_highl_loglike
-    function: function_Planck_highl_TT_lite_loglike
-    module: CosmoBit
+    function: function_Planck_highl_TTTEEE_lite_2018_loglike
+    #function: function_Planck_highl_TT_lite_2018_loglike
+
+  - capability: Planck_lensing_loglike
+    function: function_Planck_lensing_2018_loglike
+    #function: function_Planck_lensing_marged_2018_loglike
 
 #####
 ##
@@ -224,9 +237,10 @@ Rules:
     options:
       DataFile:  SH0ES.dat
 
-  - capability: plc_2_0_init
+  - capability: plc_3_0_init
     options:
-      #planck_path: /PATH/TO/plc_2.0
+      #plc_2.0_path: /PATH/TO/plc_2.0
+      #plc_3.0_path: /PATH/TO/plc_3.0
 
 #####
 ##
