--- a/yaml_files/CosmoBit_testDecay.yaml
+++ b/yaml_files/CosmoBit_testDecay.yaml
@@ -108,9 +108,19 @@ ObsLikes:
 
   - purpose:      LogLike
     capability:   Planck_highl_loglike
-    module:       CosmoBit
-    type:         double
-  
+    function:     function_Planck_highl_TTTEEE_lite_loglike
+    #function:     function_Planck_highl_TT_lite_2018_loglike
+
+  - purpose:      LogLike
+    capability:   Planck_lensing_loglike
+    function:     function_Planck_lensing_2018_loglike
+    #function:     function_Planck_lensing_marged_2018_loglike
+
+  - purpose:      LogLike
+    capability:   Planck_lowl_loglike
+    function:     function_Planck_lowl_TTEE_2018_loglike
+    #function:     function_Planck_lowl_TT_2018_loglike
+
   - purpose:      Observable
     capability:   H0_LogLike
     module:       CosmoBit
@@ -132,17 +142,6 @@ Rules:
   - capability: T_cmb
     options:
       T_cmb: 2.7255
-
-#####
-##  Since the "Planck_lite" model fits to be used by 
-##  the marginalized (lite) versions of both, the TT
-##  and the TTTEEE, likelihoods, we need to resolve
-##  this ambiguity manually.
-#####
-
-  - capability: Planck_highl_loglike
-    function: function_Planck_highl_TT_lite_loglike
-    module: CosmoBit
 
 #####
 ##
@@ -189,9 +188,10 @@ Rules:
     options:
       DataFile:  SH0ES.dat
 
-  - capability: plc_2_0_init
+  - capability: plc_3_0_init
     options:
-      #planck_path: /PATH/TO/plc_2.0
+      #plc_2.0_path: /PATH/TO/plc_2.0
+      #plc_3.0_path: /PATH/TO/plc_3.0
 
 #####
 ##
