Updated prior treatment for planck nuissance parameters
  * Gaussian priors can either be applied through deformation
    of the unit cube or as likelihoods. The latter is useful
    for frequnetist scans.
  * Gaussian prior on sz-parameter combination

	new file:       CosmoBit/data/Planck/priors_2015.dat
	new file:       CosmoBit/data/Planck/priors_2018.dat
	new file:       CosmoBit/data/Planck/priors_2018_with_EE.dat
	modified:       CosmoBit/include/gambit/CosmoBit/CosmoBit_rollcall.hpp
	modified:       CosmoBit/src/CosmoBit.cpp
	modified:       yaml_files/CosmoBit_exoClass.yaml
	modified:       yaml_files/CosmoBit_testALP.yaml
	modified:       yaml_files/CosmoBit_testCosmo.yaml
	modified:       yaml_files/CosmoBit_testDecay.yaml
	new file:       yaml_files/include/Planck_2015/Planck_TTTEEE_flat.yaml
	renamed:        yaml_files/include/Planck_TTTEEE_scan.yaml -> yaml_files/include/Planck_2015/Planck_TTTEEE_gauss.yaml
	new file:       yaml_files/include/Planck_2015/Planck_TT_flat.yaml
	renamed:        yaml_files/include/Planck_TT_scan.yaml -> yaml_files/include/Planck_2015/Planck_TT_gauss.yaml
	new file:       yaml_files/include/Planck_2015/Planck_lite_flat.yaml
	renamed:        yaml_files/include/Planck_lite_scan.yaml -> yaml_files/include/Planck_2015/Planck_lite_gauss.yaml
	new file:       yaml_files/include/Planck_2018/Planck_TTTEEE_flat.yaml
	new file:       yaml_files/include/Planck_2018/Planck_TTTEEE_gauss.yaml
	new file:       yaml_files/include/Planck_2018/Planck_TT_flat.yaml
	new file:       yaml_files/include/Planck_2018/Planck_TT_gauss.yaml
	new file:       yaml_files/include/Planck_2018/Planck_lite_flat.yaml
	new file:       yaml_files/include/Planck_2018/Planck_lite_gauss.yaml

--- a/yaml_files/CosmoBit_exoClass.yaml
+++ b/yaml_files/CosmoBit_exoClass.yaml
@@ -31,7 +31,8 @@ Parameters:
  cosmo_nuisance_params_Pantheon: !import include/cosmo_nuisance_params_Pantheon.yaml
 
  # nuisance parameters in Planck likelihood
- Planck_lite: !import include/Planck_lite_scan.yaml
+ Planck_lite: !import include/Planck_2018/Planck_lite_flat.yaml
+ #Planck_lite: !import include/Planck_2018/Planck_lite_gauss.yaml
 
  # model parameters for "CosmoALP"
  CosmoALP:
@@ -85,6 +86,11 @@ ObsLikes:
 
   - purpose:      LogLike
     capability:   dmNu3l_LogLike
+    module:       CosmoBit
+    type:         double
+
+  - purpose:      LogLike
+    capability:   Planck_nuissance_prior_loglike
     module:       CosmoBit
     type:         double
 
