--- a/yaml_files/CosmoBit_exoClass.yaml
+++ b/yaml_files/CosmoBit_exoClass.yaml
@@ -21,9 +21,21 @@ Parameters:
  # --- import model parameters for models to scan over ---
  LCDM: !import include/LCDM_scan.yaml        # base LCDM
 
+ # Everything Neff and eta related
+ #etaBBN:                             !import include/etaBBN.yaml
+ #rCMB:                               !import include/rCMB.yaml
+ #rBBN_rCMB:                          !import include/rBBN_rCMB.yaml
+ #dNeffCMB:                           !import include/dNeffCMB.yaml
+ #dNeffBBN_dNeffCMB:                  !import include/dNeffBBN_dNeffCMB.yaml
+ #rBBN_rCMB_dNeffBBN_dNeffCMB:        !import include/rBBN_rCMB_dNeffBBN_dNeffCMB.yaml
+ etaBBN_rBBN_rCMB_dNeffBBN_dNeffCMB: !import include/etaBBN_rBBN_rCMB_dNeffBBN_dNeffCMB.yaml
+
  # neutrino masses
  #StandardModel_numass_single: !import include/StandardModel_numass_single_scan.yaml
- StandardModel_numass_degenerate: !import include/StandardModel_numass_degenerate_scan.yaml
+ #StandardModel_numass_degenerate: !import include/StandardModel_numass_degenerate_scan.yaml
+ StandardModel_mNudiff: !import include/StandardModel_mNudiff_both_scan.yaml
+ #StandardModel_mNudiff: !import include/StandardModel_mNudiff_NH_scan.yaml
+ #StandardModel_mNudiff: !import include/StandardModel_mNudiff_IH_scan.yaml
 
  # Cosmological nuisance parameters (except for Planck CMB Likelihoods) 
  cosmo_nuisance_params_Pantheon: !import include/cosmo_nuisance_params_Pantheon.yaml
@@ -32,19 +44,8 @@ Parameters:
  Planck_lite: !import include/Planck_2018/Planck_lite_flat.yaml
  #Planck_lite: !import include/Planck_2018/Planck_lite_gauss.yaml
 
- # model parameters for "CosmoALP"
- CosmoALP:
-   Cagg: 1.0
-   fa:
-     range: [1e2, 1e12]
-     prior_type: log
-   ma0:
-     range: [1.0E+2, 1.0E+7]
-     prior_type: log
-   thetai: 0.0
-   f0_thermal:
-      range: [1e-12, 1e1]
-   T_R: 5.0
+ # model parameters for "TestDecayingDM"
+ TestDecayingDM: !import include/TestDecayingDM_scan.yaml
 
 #======== Prior setup ========
 Priors:
@@ -78,14 +79,19 @@ Scanner:
 #======== Observables of interest ========
 ObsLikes:
   - purpose:      LogLike
-    capability:   dmNu21_LogLike
-    module:       CosmoBit
+    capability:   md21_lnL
+    module:       NeutrinoBit
     type:         double
 
   - purpose:      LogLike
-    capability:   dmNu3l_LogLike
-    module:       CosmoBit
+    capability:   md3l_lnL
+    module:       NeutrinoBit
     type:         double
+
+  - purpose:      Observable
+    capability:   ordering
+    module:       NeutrinoBit
+    type:         bool
 
   - purpose:      LogLike
     capability:   Planck_nuissance_prior_loglike
@@ -94,18 +100,15 @@ ObsLikes:
 
   - purpose:      LogLike
     capability:   Planck_highl_loglike
-    function:     function_Planck_highl_TT_lite_2018_loglike
-    #function:     function_Planck_highl_TTTEEE_lite_loglike
+    function:     function_Planck_highl_TTTEEE_lite_2018_loglike
 
   - purpose:      LogLike
     capability:   Planck_lensing_loglike
     function:     function_Planck_lensing_2018_loglike
-    #function:     function_Planck_lensing_marged_2018_loglike
 
   - purpose:      LogLike
     capability:   Planck_lowl_loglike
     function:     function_Planck_lowl_TTEE_2018_loglike
-    #function:     function_Planck_lowl_TT_2018_loglike
 
   - purpose:      Obs
     capability:   Omega0_m
@@ -182,12 +185,6 @@ Rules:
       # still need to write a proper patch for MPLike backend & test all Likes
       Observables:
         WiggleZ: default
-
-  - capability: DM_fraction
-    function: DM_fraction_ALP
-
-  - capability: lifetime
-    function: lifetime_ALP_agg
 
   #- capability: Omega0_r
   #  function: get_Omega0_ur_classy
