--- a/yaml_files/CosmoBit_testALP.yaml
+++ b/yaml_files/CosmoBit_testALP.yaml
@@ -28,7 +28,10 @@ Parameters:
  
  # neutrino masses
  #StandardModel_numass_single: !import include/StandardModel_numass_single_scan.yaml
- StandardModel_numass_degenerate: !import include/StandardModel_numass_degenerate_scan.yaml
+ #StandardModel_numass_degenerate: !import include/StandardModel_numass_degenerate_scan.yaml
+ StandardModel_mNudiff: !import include/StandardModel_mNudiff_both_scan.yaml
+ #StandardModel_mNudiff: !import include/StandardModel_mNudiff_NH_scan.yaml
+ #StandardModel_mNudiff: !import include/StandardModel_mNudiff_IH_scan.yaml
 
  # nuisance parameters in Planck likelihood
  Planck_lite: !import include/Planck_2018/Planck_lite_gauss.yaml
@@ -83,14 +86,19 @@ Scanner:
 ObsLikes:
 
   - purpose:      LogLike
-    capability:   dmNu21_LogLike
-    module:       CosmoBit
+    capability:   md21_lnL
+    module:       NeutrinoBit
     type:         double
 
   - purpose:      LogLike
-    capability:   dmNu3l_LogLike
-    module:       CosmoBit
+    capability:   md3l_lnL
+    module:       NeutrinoBit
     type:         double
+
+  - purpose:      Observable
+    capability:   ordering
+    module:       NeutrinoBit
+    type:         bool
 
   - purpose:      LogLike
     capability:   BAO_LogLike
@@ -112,10 +120,10 @@ ObsLikes:
     module:       DarkBit
     type:         double
 
-#  - purpose:      LogLike
-#    capability:   Pantheon_LogLike
-#    module:       CosmoBit
-#    type:         double
+  - purpose:      LogLike
+    capability:   Pantheon_LogLike
+    module:       CosmoBit
+    type:         double
 
   - purpose:      LogLike
     capability:   Planck_lowl_loglike
@@ -160,16 +168,13 @@ Rules:
 #####
 
   - capability: Planck_lowl_loglike
-    function: function_Planck_lowl_TT_2018_loglike
-    #function: function_Planck_lowl_TTEE_2018_loglike
+    function: function_Planck_lowl_TTEE_2018_loglike
 
   - capability: Planck_highl_loglike
     function: function_Planck_highl_TTTEEE_lite_2018_loglike
-    #function: function_Planck_highl_TT_lite_2018_loglike
 
   - capability: Planck_lensing_loglike
     function: function_Planck_lensing_2018_loglike
-    #function: function_Planck_lensing_marged_2018_loglike
 
   - capability: get_classy_cosmo_container
     function: init_classy_cosmo_container
