Update ALP yaml files
  * lnL_SN1987A_DecayApprox -> lnL_SN1987A_Decay

	modified:       yaml_files/CosmoBit_ALP.yaml
	modified:       yaml_files/CosmoBit_testALP.yaml

--- a/yaml_files/CosmoBit_ALP.yaml
+++ b/yaml_files/CosmoBit_ALP.yaml
@@ -81,7 +81,7 @@ ObsLikes:
   - capability: lnL_RParameter
     purpose: LogLike
 
-  - capability: lnL_SN1987A_DecayApprox
+  - capability: lnL_SN1987A_Decay
     purpose: LogLike
 
   - capability: DM_fraction
