--- a/yaml_files/CosmoBit_testALP.yaml
+++ b/yaml_files/CosmoBit_testALP.yaml
@@ -10,7 +10,7 @@
 ##
 ##  To test this you need to make the backends 'class', 'alterbbn' and 'plc'.
 ##  You also need to download the Planck data and set the path to it in the
-##  rules for 
+##  rules for
 ##  - capability: plc_2_0_init
 ##    options:
 ##      planck_path: path/to/your/planck/data
@@ -22,10 +22,10 @@
 
 #======== Input parameter declarations =======
 Parameters:
- 
+
  # --- import model parameters for models to scan over ---
- LCDM: !import include/LCDM_scan.yaml       
- 
+ LCDM: !import include/LCDM_scan.yaml
+
  # neutrino masses
  #StandardModel_numass_single: !import include/StandardModel_numass_single_scan.yaml
  StandardModel_numass_degenerate: !import include/StandardModel_numass_degenerate_scan.yaml
@@ -33,9 +33,9 @@ Parameters:
  # nuisance parameters in Planck likelihood
  Planck_lite: !import include/Planck_lite_scan.yaml
 
- # Cosmological nuisance parameters (except for Planck CMB Likelihoods) 
+ # Cosmological nuisance parameters (except for Planck CMB Likelihoods)
  cosmo_nuisance_params: !import include/cosmo_nuisance_params.yaml
- 
+
  # Model Parameters of CosmoALP
  CosmoALP:
    Cagg: 1.0
@@ -81,7 +81,7 @@ Scanner:
 
 #======== Observables of interest ========
 ObsLikes:
-  
+
   - purpose:      LogLike
     capability:   BAO_LogLike
     module:       CosmoBit
@@ -93,7 +93,7 @@ ObsLikes:
     type:         double
 
   - purpose:      LogLike
-    capability:   lnL_SN1987A_DecayApprox
+    capability:   lnL_SN1987A_Decay
     module:       DarkBit
     type:         double
 
@@ -111,7 +111,7 @@ ObsLikes:
     capability:   compute_Planck_high_TT_loglike
     module:       CosmoBit
     type:         double
-  
+
   - purpose:      Observable
     capability:   Helium_abundance
     module:       CosmoBit
@@ -133,7 +133,7 @@ Rules:
     module: CosmoBit
 
 #####
-##  Since the "Planck_lite" model fits to be used by 
+##  Since the "Planck_lite" model fits to be used by
 ##  the marginalized (lite) versions of both, the TT
 ##  and the TTTEEE, likelihoods, we need to resolve
 ##  this ambiguity manually.
@@ -151,8 +151,8 @@ Rules:
   - capability: BAO_LogLike
     options:
       DataFile:  BAO_2014.dat
-  
-  
+
+
   - capability: H0_LogLike
     options:
       DataFile:  SH0ES.dat
