--- a/yaml_files/CosmoBit_ALP.yaml
+++ b/yaml_files/CosmoBit_ALP.yaml
@@ -81,7 +81,7 @@ ObsLikes:
   - capability: lnL_RParameter
     purpose: LogLike
 
-  - capability: lnL_SN1987A_Decay
+  - capability: lnL_SN1987A
     purpose: LogLike
 
   - capability: DM_fraction
