--- a/yaml_files/CosmoBit_testALP.yaml
+++ b/yaml_files/CosmoBit_testALP.yaml
@@ -111,7 +111,7 @@ ObsLikes:
     type:         double
 
   - purpose:      LogLike
-    capability:   lnL_SN1987A_Decay
+    capability:   lnL_SN1987A
     module:       DarkBit
     type:         double
 
