Renamed "TestDecayingDM"; now "DecayingDM_general". Also added two childs of it for 100% decay into photons and electrons, respectively
	modified:       Backends/include/gambit/Backends/frontends/exoclass_2_7_0.hpp
	modified:       Backends/src/frontends/exoclass_2_7_0.cpp
	modified:       CosmoBit/include/gambit/CosmoBit/CosmoBit_rollcall.hpp
	modified:       CosmoBit/src/CosmoBit.cpp
	modified:       Models/include/gambit/Models/models/Axions.hpp
	modified:       Models/include/gambit/Models/models/CosmoEnergyInjection.hpp
	modified:       Models/src/models/Axions.cpp
	new file:       Models/src/models/CosmoEnergyInjection.cpp
	modified:       config/capabilities.dat
	modified:       config/models.dat
	modified:       yaml_files/CosmoBit_exoClass.yaml
	modified:       yaml_files/CosmoBit_testDecay.yaml
	modified:       yaml_files/DarkAges_test.yaml
	moved:          yaml_files/include/TestDecayingDM_scan.yaml -> yaml_files/include/DecayingDM_general_scan.yaml

--- a/yaml_files/CosmoBit_exoClass.yaml
+++ b/yaml_files/CosmoBit_exoClass.yaml
@@ -44,8 +44,8 @@ Parameters:
  Planck_lite: !import include/Planck_2018/Planck_lite_flat.yaml
  #Planck_lite: !import include/Planck_2018/Planck_lite_gauss.yaml
 
- # model parameters for "TestDecayingDM"
- TestDecayingDM: !import include/TestDecayingDM_scan.yaml
+ # model parameters for "DecayingDM_general"
+ DecayingDM_general: !import include/DecayingDM_general_scan.yaml
 
 #======== Prior setup ========
 Priors:
