--- a/yaml_files/include/DecayingDM_general_scan.yaml
+++ b/yaml_files/include/DecayingDM_general_scan.yaml
@@ -1,5 +1,5 @@
 ##########################################################################
-## TestDecayingDM parameter
+## DecayingDM_general parameter
 ##
 ## Patrick Stoecker <stoecker@physik.rwth-aachen.de>
 ## 2019, Feb
