--- a/yaml_files/CosmoBit_testDecay.yaml
+++ b/yaml_files/CosmoBit_testDecay.yaml
@@ -45,8 +45,8 @@ Parameters:
  # nuisance parameters in Planck likelihood
  Planck_lite: !import include/Planck_2018/Planck_lite_gauss.yaml
 
- # model parameters for "TestDecayingDM"
- TestDecayingDM: !import include/TestDecayingDM_scan.yaml
+ # model parameters for "DecayingDM_general"
+ DecayingDM_general: !import include/DecayingDM_general_scan.yaml
 
  # nuisance paramters for other cosmological likelihoods
  cosmo_nuisance_params_Pantheon: !import include/cosmo_nuisance_params_Pantheon.yaml
