Partitioned scratch files into files created at build time and at runtime.
Further split runtime scratch files into installation-wide process lock
files and run-specific scratch subdirectories, indexed by unique machine
ID and process ID of the rank 0 process of each run.

This fixes #80.

	modified:   CMakeLists.txt
	modified:   Core/include/gambit/Core/core.hpp
	modified:   Core/src/core.cpp
	modified:   Core/src/depresolver.cpp
	modified:   Core/src/diagnostics.cpp
	modified:   Core/src/gambit.cpp
	modified:   Elements/scripts/module_harvester.py
	modified:   Elements/scripts/standalone_facilitator.py
	modified:   Logs/src/logmaster.cpp
	modified:   Printers/scripts/printer_harvester.py
	modified:   ScannerBit/scripts/scanner+_harvester.py
	modified:   ScannerBit/src/plugin_loader.cpp
	modified:   Utils/include/gambit/Utils/mpiwrapper.hpp
	modified:   Utils/include/gambit/Utils/util_functions.hpp
	modified:   Utils/src/file_lock.cpp
	modified:   Utils/src/mpiwrapper.cpp
	modified:   Utils/src/util_functions.cpp
	modified:   cmake/cleaning.cmake
	modified:   cmake/scripts/update_cmakelists.py

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -463,6 +463,8 @@ string (REPLACE ";" "," itch_with_commas "${itch}")
 if(NOT EXISTS "${PROJECT_SOURCE_DIR}/scratch")
   message("${Yellow}-- Creating scratch directory${ColourReset}")
   execute_process(COMMAND ${CMAKE_COMMAND} -E make_directory scratch WORKING_DIRECTORY ${PROJECT_SOURCE_DIR})
+  execute_process(COMMAND ${CMAKE_COMMAND} -E make_directory build_time WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/scratch)
+  execute_process(COMMAND ${CMAKE_COMMAND} -E make_directory run_time WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}/scratch)
   message("${Yellow}-- Creating scratch directory - done.${ColourReset}")
 endif()
 
