Began fixing MPI Isend + Wait problem. Turns out that all Isends are supposed to eventually, at some later point, be followed by a Wait, which ensures that the send operation is fully completed (just the send part, doesn't guarantee that the message has been recv'd). I believe the lack of these Wait commands was causing some of the hangs we were seeing near MPI_finalize. I have added these to all instances of shutdown message transmissions, however we use Isend in a few other places, for example BarrierWithTimeout that is required for soft shutdown attempts with scanners lacking a 'quit' flag. These I have not fixed as it is kind of complicated. I think they are less likely to cause the hanging issues though, since these messages are sent a longer time before MPI_finalize is called, which gives them a longer time to be completed despite the lack of a proper guarantee for this.

--- a/yaml_files/spartan.yaml
+++ b/yaml_files/spartan.yaml
@@ -35,7 +35,7 @@ Printer:
     output_file: "results.hdf5"
     group: "/spartan"
     delete_file_on_restart: true
-    buffer_length: 100000
+    buffer_length: 100
     #disable_autorepair: true
 
   #printer: ascii
@@ -48,7 +48,7 @@ Printer:
 
 Scanner:
 
-  use_scanner: random
+  use_scanner: de
 
   scanners:
 
@@ -98,8 +98,8 @@ Rules:
 
   # None required, since no module dependencies to be resolved.
   - capability: normaldist_loglike   
-    #options:
-    #    probability_of_validity: 0.9
+    options:
+        probability_of_validity: 1.0
 
 Logger:
 
