--- a/yaml_files/spartan.yaml
+++ b/yaml_files/spartan.yaml
@@ -107,7 +107,7 @@ Logger:
     [Default]      : "default.log"
     [ExampleBit_A] : "ExampleBit_A.log"
     [Scanner]      : "Scanner.log"
-  #debug: true
+  debug: true
 
 KeyValues:
 
