--- a/yaml_files/CosmoBit_inflationTest.yaml
+++ b/yaml_files/CosmoBit_inflationTest.yaml
@@ -15,19 +15,7 @@
 Parameters:
   StandardModel_numass_degenerate: !import include/StandardModel_numass_degenerate_scan.yaml
   
-  LCDM:
-    omega_b:
-      fixed_value: 2.24052e-02
-    omega_cdm:
-      fixed_value: 1.18078e-01
-    H0:
-      fixed_value: 6.81383e+01
-    tau_reio:
-      fixed_value: 7.25805e-02
-    ln10A_s: 3.0
-    n_s: 1.0
-  
-  #LCDM_no_primordial:
+  #LCDM:
   #  omega_b:
   #    fixed_value: 2.24052e-02
   #  omega_cdm:
@@ -36,6 +24,18 @@ Parameters:
   #    fixed_value: 6.81383e+01
   #  tau_reio:
   #    fixed_value: 7.25805e-02
+  #  ln10A_s: 3.0
+  #  n_s: 1.0
+  
+  LCDM_no_primordial:
+    omega_b:
+      fixed_value: 2.24052e-02
+    omega_cdm:
+      fixed_value: 1.18078e-01
+    H0:
+      fixed_value: 6.81383e+01
+    tau_reio:
+      fixed_value: 7.25805e-02
 
   #Inflation_1quar:
   #  N_pivot: 40
@@ -47,15 +47,15 @@ Parameters:
   #  phi_init0: 10
   #   #fixed_value: 10.0
     
-  #Inflation_SR1quad:
-  #  N_pivot: 40
-  #    #prior_type: flat
-  #    #range: [40.0,70.0]
-  #  m2_inflaton: -9.9
-  #    #prior_type: flat
-  #    #range: [-9.8,-9.10]
-  #  phi_init0:
-  #    fixed_value: 10.0
+  Inflation_SR1quad:
+    N_pivot: 40
+      #prior_type: flat
+      #range: [40.0,70.0]
+    m2_inflaton: -9.9
+      #prior_type: flat
+      #range: [-9.8,-9.10]
+    phi_init0:
+      fixed_value: 10.0
     
   #Inflation_1quar:
   #  N_pivot:
@@ -160,9 +160,9 @@ Rules:
   - capability: get_classy_cosmo_container
     function: init_classy_cosmo_container_with_MPLike
   
-  #- capability: set_classy_parameters
-  #  function: set_classy_parameters_primordial_ps
-  #  module: CosmoBit
+  - capability: set_classy_parameters
+    function: set_classy_parameters_primordial_ps
+    module: CosmoBit
   - capability: baseline_classy_input
     #function: set_baseline_classy_input
     options:
