Move Planck routines into Planck.cpp, remove BAO + Pantheon likelihoods as they are the same as in MontePython, some typos and comments
	modified:   CosmoBit/include/gambit/CosmoBit/CosmoBit_rollcall.hpp
	modified:   CosmoBit/src/CosmoBit.cpp
	new file:   CosmoBit/src/Planck.cpp
	modified:   yaml_files/CosmoBit_exoClass.yaml
	modified:   yaml_files/include/Planck_2015/Planck_TTTEEE_flat.yaml
	modified:   yaml_files/include/Planck_2015/Planck_TTTEEE_gauss.yaml
	modified:   yaml_files/include/Planck_2015/Planck_TT_flat.yaml
	modified:   yaml_files/include/Planck_2015/Planck_TT_gauss.yaml
	modified:   yaml_files/include/Planck_2015/Planck_lite_flat.yaml
	modified:   yaml_files/include/Planck_2015/Planck_lite_gauss.yaml
	modified:   yaml_files/include/Planck_2018/Planck_TTTEEE_flat.yaml
	modified:   yaml_files/include/Planck_2018/Planck_TTTEEE_gauss.yaml
	modified:   yaml_files/include/Planck_2018/Planck_TT_flat.yaml
	modified:   yaml_files/include/Planck_2018/Planck_TT_gauss.yaml
	modified:   yaml_files/include/Planck_2018/Planck_lite_flat.yaml
	modified:   yaml_files/include/Planck_2018/Planck_lite_gauss.yaml
	modified:   yaml_files/include/cosmo_nuisance_params.yaml
	modified:   yaml_files/include/cosmo_nuisance_params_Pantheon.yaml

--- a/yaml_files/include/Planck_2018/Planck_TTTEEE_gauss.yaml
+++ b/yaml_files/include/Planck_2018/Planck_TTTEEE_gauss.yaml
@@ -1,8 +1,8 @@
 ##########################################################################
-## Nuissance parameter of "Planck_TTTEEE"
+## Nuisance parameter of "Planck_TTTEEE"
 ##
 ## Gaussian priors on chosen parameters as recommenrded by Planck.
-## Should not be scanned with  "Planck_nuissance_prior_loglike"
+## Should not be scanned with  "Planck_nuisance_prior_loglike"
 ##
 ## Patrick Stoecker <stoecker@physik.rwth-aachen.de>
 ## 2019, Aug
