--- a/yaml_files/include/Planck_2015/Planck_TTTEEE_flat.yaml
+++ b/yaml_files/include/Planck_2015/Planck_TTTEEE_flat.yaml
@@ -1,8 +1,8 @@
 ##########################################################################
-## Nuissance parameter of "Planck_TTTEEE"
+## Nuisance parameter of "Planck_TTTEEE"
 ##
 ## Flat prior on all parameters. Should be scanned with
-## "Planck_nuissance_prior_loglike"
+## "Planck_nuisance_prior_loglike"
 ##
 ## Patrick Stoecker <stoecker@physik.rwth-aachen.de>
 ## 2018, Jan
