--- a/yaml_files/include/Planck_2015/Planck_TT_gauss.yaml
+++ b/yaml_files/include/Planck_2015/Planck_TT_gauss.yaml
@@ -1,8 +1,8 @@
 ##########################################################################
-## Nuissance parameter of "Planck_TT"
+## Nuisance parameter of "Planck_TT"
 ##
 ## Gaussian priors on chosen parameters as recommenrded by Planck.
-## Should not be scanned with  "Planck_nuissance_prior_loglike"
+## Should not be scanned with  "Planck_nuisance_prior_loglike"
 ##
 ## Patrick Stoecker <stoecker@physik.rwth-aachen.de>
 ## 2018, Jan
