--- a/yaml_files/include/cosmo_nuisance_params_Pantheon.yaml
+++ b/yaml_files/include/cosmo_nuisance_params_Pantheon.yaml
@@ -1,5 +1,5 @@
 ##########################################################################
-## Nuissance parameter of Cosmological likelihoods (excluding the Planck CMB fits)
+## Nuisance parameter of Cosmological likelihoods (excluding the Planck CMB fits)
 ##
 ## Janina Renk
 ## janina.renk@fysik.su.se
