Started reworking MultiModeCode. Segfaults after calling the new BE function. :(
	modified:   Backends/include/gambit/Backends/backend_types/MultiModeCode.hpp
	modified:   Backends/include/gambit/Backends/backend_types/MultiModeCode_2_0_0/multimodecode_gambit.f90
	modified:   Backends/include/gambit/Backends/frontends/MultiModeCode_2_0_0.hpp
	modified:   Backends/src/frontends/classy_2_6_3.cpp
	modified:   CosmoBit/include/gambit/CosmoBit/CosmoBit_rollcall.hpp
	modified:   CosmoBit/include/gambit/CosmoBit/CosmoBit_types.hpp
	modified:   CosmoBit/src/CosmoBit.cpp
	modified:   CosmoBit/src/CosmoBit_types.cpp
	modified:   yaml_files/CosmoBit_inflationTest.yaml

--- a/yaml_files/CosmoBit_inflationTest.yaml
+++ b/yaml_files/CosmoBit_inflationTest.yaml
@@ -141,7 +141,7 @@ Rules:
       dlnk:                     0.4
 # For calculating the full power spectrum P(k).  Samples in uniform increments in log(k).
       #calc_full_pk: 0
-      steps: 100
+      numsteps: 100
       kmin: 1e-7
       kmax: 1e6
   
@@ -157,8 +157,8 @@ Rules:
     function: init_classy_cosmo_container_with_MPLike
   
   - capability: set_classy_parameters
-    #function: set_classy_parameters_parametrised_ps
-    function: set_classy_parameters_primordial_ps
+    function: set_classy_parameters_parametrised_ps
+    #function: set_classy_parameters_primordial_ps
     module: CosmoBit
 
   - capability: baseline_classy_input
